# semantic2sql-symbolic

./: .gitignore  README.md  api.py  env.example  pyproject.toml  requirements.txt  test_contract_basic.py
.github/workflows/: lint.yml
examples/: basic_usage.py  database_usage.py
notebooks/: symbolicai_test.ipynb
semantic2sql/: __init__.py  contracts.py  database.py  models.py  sql_generator.py
tests/: __init__.py  test_contracts.py  test_dialect_performance.py  test_models.py  test_sql_generator.py
